--- a/Magdalena/index.html
+++ b/Magdalena/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <header>
+        <div class="row ${1| ,row-cols-2,row-cols-1, auto,justify-contentorder--1,|}">
+
+
+        </div><img src="Lion King.img/R.jpg" alt="R.jpg"></header>
     <div class="style0">The Lion King</div>
     <div class="style1">Movie</div>
     <div class="style2">Coming soon</div>
@@ -23,9 +28,7 @@
         <p></p>
     </div>
 
-    <div class="row-2-column-2"></div>
-    <div class="Style5"></div>
-    <div class="Style6"></div>
+
 
 
     <img src="Lion King.img/king.jpg" alt="king.jpg">
